--- a/areas.html
+++ b/areas.html
@@ -4,23 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Areas of study</title>
-    <link href=".\styles.css" type="text/css" rel="stylesheet"/>
+    <link href=".\stilos\styles.css" type="text/css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 <body>
-    <header>
-        <nav class="menu">
-            <h1>AREAS</h1>
-            <ul>
-                <li><a class="items" href="areas.html">AREAS</a></li>
-                <li><a class="items" href="teachers.html">TEACHERS</a></li>
-                <li><a class="items" href="msg.html">MESSAGES</a></li>
-                <li><a class="items" href="foros.html">FORUMS</a></li>
-                <li><a class="items" href="material.html">MATERIAL</a></li>
-                <li><a class="items" href="quizes.html">QUIZZES</a></li>
-                <li><a class="items" href="perfil.html"><img src="./images/pefril.jpg" height="30px"></a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav  class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important;" >
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#" style="color: #e8ffce !important;">AREAS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="areas.html"><b>AREAS</b></a></li>
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="teachers.html">TEACHERS</a></li>
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="msg.html">MESSAGES</a></li>
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="foros.html">FORUMS</a></li>
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="material.html">MATERIAL</a></li>
+              <li class="nav-item"><a class="nav-link active"  style="color: #e8ffce !important;" href="quizes.html">QUIZZES</a></li>
+          
+          </ul>
+          <span class="navbar-text">
+              <a class="nav-link active" href="perfil.html"><img src="./images/perf.png" height="30px"></a>
+          </span>
+        </div>
+      </div>
+    </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
