--- a/foros.html
+++ b/foros.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forums</title>
     <link href=".\stilos\styles.css" type="text/css" rel="stylesheet"/>
+    <link href=".\stilos\forossty.css" type="text/css" rel="stylesheet"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 <body>
-    <nav  class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important;" >
+    <nav  class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important;margin-bottom: 40px;" >
         <div class="container-fluid">
           <a class="navbar-brand" href="#" style="color: #e8ffce !important;">FORUMS</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,6 +33,130 @@
           </div>
         </div>
       </nav>
+
+      
+      <div class="container">
+        <div class="row clearfix">
+            <div class="col-lg-12">
+                <div class="card chat-app">
+                    <div id="plist" class="people-list chatn">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="fa fa-search"></i></span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="Search...">
+                        </div>
+                        <ul class="list-unstyled chat-list mt-2 mb-0">
+                            <li class="clearfix active">
+                                <img src="./images/fle.png" alt="avatar">
+                                <div class="about">
+                                    <div class="name">MATH</div>
+                                    <div class="status"> <i class="fa fa-circle offline"></i> inactive </div>                                            
+                                </div>
+                            </li>
+                            <li class="clearfix">
+                                <img src="./images/fle.png" alt="avatar">
+                                <div class="about">
+                                    <div class="name">SCIENCE</div>
+                                    <div class="status"> <i class="fa fa-circle online"></i> active </div>
+                                </div>
+                            </li>
+                            <li class="clearfix">
+                                <img src="./images/fle.png" alt="avatar">
+                                <div class="about">
+                                    <div class="name">GRAMMAS</div>
+                                    <div class="status"> <i class="fa fa-circle online"></i> active </div>
+                                </div>
+                            </li>                                    
+                            <li class="clearfix">
+                                <img src="./images/fle.png" alt="avatar">
+                                <div class="about">
+                                    <div class="name">SOCIAL SICENCES</div>
+                                    <div class="status"> <i class="fa fa-circle offline"></i> inactive </div>
+                                </div>
+                            </li>
+                            <li class="clearfix">
+                                <img src="./images/fle.png" alt="avatar">
+                                <div class="about">
+                                    <div class="name">LANGUAGE</div>
+                                    <div class="status"> <i class="fa fa-circle online"></i> active </div>
+                                </div>
+                            </li>
+                            <li class="clearfix">
+                                <img src="./images/fle.png" alt="avatar">
+                                <div class="about">
+                                    <div class="name">CODING</div>
+                                    <div class="status"> <i class="fa fa-circle offline"></i> inactive </div>
+                                </div>
+                            </li>
+                            <li class="clearfix">
+                                <img src="./images/fle.png" alt="avatar">
+                                <div class="about">
+                                    <div class="name">GEOMETRY</div>
+                                    <div class="status"> <i class="fa fa-circle offline"></i> inactive </div>
+                                </div>
+                            </li>
+                            <li class="clearfix">
+                                <img src="./images/fle.png" alt="avatar">
+                                <div class="about">
+                                    <div class="name">HISTORY</div>
+                                    <div class="status"> <i class="fa fa-circle offline"></i> inactive </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="chat  chatsss">
+                        <div class="chat-header clearfix">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
+                                        <img src="./images/forumss.png" alt="avatar">
+                                    </a>
+                                    <div class="chat-about">
+                                        <h6 class="m-b-0">MATH</h6>
+                                        <small>203 Participants</small>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 hidden-sm text-right">
+                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="chat-history">
+                            <ul class="m-b-0">
+                                <li class="clearfix">
+                                    <div class="message-data text-right">
+                                        <span class="message-data-time">10:10 AM, Today</span>
+                                    </div>
+                                    <div class="message other-message float-right"> How do you soolve a cuadratic ecuation? </div>
+                                </li>
+                                <li class="clearfix">
+                                    <div class="message-data">
+                                        <span class="message-data-time">10:12 AM, Today</span>
+                                    </div>
+                                    <div class="message my-message">With the general formula</div>                                    
+                                </li>                               
+                                <li class="clearfix">
+                                    <div class="message-data">
+                                        <span class="message-data-time">10:15 AM, Today</span>
+                                    </div>
+                                    <div class="message my-message">I can teach you</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="chat-message clearfix">
+                            <div class="input-group mb-0">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fa fa-send"></i></span>
+                                </div>
+                                <input type="text" class="form-control" placeholder="Enter text here...">                                    
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
