--- a/msg.html
+++ b/msg.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <nav  class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important;margin-bottom: 40px;" >
+    <nav  class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important;" >
     <div class="container-fluid">
         <a class="navbar-brand" href="#" style="color: #e8ffce !important;">MESSAGES</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -139,7 +139,7 @@
                                     <div class="message-data">
                                         <span class="message-data-time">10:15 AM, Today</span>
                                     </div>
-                                    <div class="message my-message">I'll let you know when im finished </div>
+                                    <div class="message my-message">I'll let you know when im finished</div>
                                 </li>
                             </ul>
                         </div>
