--- a/quizes.html
+++ b/quizes.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizzes</title>
     <link href=".\stilos\styles.css" type="text/css" rel="stylesheet"/>
+    <link href=".\stilos\forossty.css" type="text/css" rel="stylesheet"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 <body>
-    <nav  class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important;" >
+    <nav  class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #171335 !important; margin-bottom: 40px;" >
     <div class="container-fluid">
         <a class="navbar-brand" href="#" style="color: #e8ffce !important;">QUIZZES</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,6 +33,143 @@
         </div>
       </div>
     </nav>
+    <div class="container">
+      <div class="row clearfix">
+          <div class="col-lg-12">
+              <div class="card chat-app">
+                  <div id="plist" class="people-list chatn">
+                      <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-search"></i></span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Search...">
+                    </div>
+                      <ul class="list-unstyled chat-list mt-2 mb-0">
+                          <li class="clearfix active">
+                              <img src="./images/calculator-solid.svg" alt="subject">
+                              <div class="about">
+                                  <div class="name">MATH</div>                                          
+                              </div>
+                          </li>
+                          <li class="clearfix">
+                              <img src="./images/flask-solid.svg" alt="subject">
+                              <div class="about">
+                                  <div class="name">SCIENCE</div>
+                              </div>
+                          </li>
+                          <li class="clearfix">
+                              <img src="./images/spell-check-solid.svg" alt="subject">
+                              <div class="about">
+                                  <div class="name">GRAMMAR</div>
+                              </div>
+                          </li>                                    
+                          <li class="clearfix">
+                              <img src="./images/users-solid.svg" alt="subject">
+                              <div class="about">
+                                  <div class="name">SOCIAL SCIENCES</div>
+                              </div>
+                          </li>
+                          <li class="clearfix">
+                              <img src="./images/globe-solid.svg" alt="subject">
+                              <div class="about">
+                                  <div class="name">LANGUAGE</div>
+                              </div>
+                          </li>
+                          <li class="clearfix">
+                              <img src="./images/code-solid.svg" alt="subject">
+                              <div class="about">
+                                  <div class="name">CODING</div>
+                              </div>
+                          </li>
+                          <li class="clearfix">
+                              <img src="./images/ruler-combined-solid.svg" alt="subject">
+                              <div class="about">
+                                  <div class="name">GEOMETRY</div>
+                              </div>
+                          </li>
+                          <li class="clearfix">
+                              <img src="./images/landmark-solid.svg" alt="subject">
+                              <div class="about">
+                                  <div class="name">HISTORY</div>
+                              </div>
+                          </li>
+                      </ul>
+                  </div>
+                  <div class="chat chatsss">
+                    <div class="chat-header clearfix">
+                      <div class="row">
+                          <div class="col-lg-6">
+                              <a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
+                                  <img src="./images/calculator-solid.svg" alt="avatar">
+                              </a>
+                              <div class="chat-about">
+                                  <h6 class="m-b-0">MATH QUIZZES</h6>
+                              </div>
+                          </div>
+                      </div>
+                    </div>
+                    <div class="chat-history">
+                      <div class="row row-cols-md-3">
+                        <div class="col">
+                          <div class="card">
+                            <img src="./images/PDF_file_icon.svg.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">AP Calculus</h5>
+                              <p>#Math</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card">
+                            <img src="./images/PDF_file_icon.svg.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Basic Algebra</h5>
+                              <p>#Math</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card">
+                            <img src="./images/PDF_file_icon.svg.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Statistics</h5>
+                              <p>#Math</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card">
+                            <img src="./images/PDF_file_icon.svg.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Pre-Calculus</h5>
+                              <p>#Math</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card">
+                            <img src="./images/PDF_file_icon.svg.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Pre-Calculus</h5>
+                              <p>#Math</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card">
+                            <img src="./images/PDF_file_icon.svg.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Pre-Calculus</h5>
+                              <p>#Math</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+          </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
