--- a/perfil.html
+++ b/perfil.html
@@ -6,6 +6,8 @@
     <title>My profile</title>
     <link href=".\stilos\styles.css" type="text/css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="profile.css"/>
+
 
 </head>
 <body>
@@ -31,8 +33,28 @@
         </div>
       </div>
     </nav>
-    <p>hola</p>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </head>
 
+    <div class="card mb-3" class="card" id="card">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="./images/EmmaCollins.png" id="ProfilePicture" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title"><b>Name</b> Emma Collins</h5>
+            <p class="card-text"> 
+              <p><b>Age: </b> 45 </p>
+              <p><b>E-mail</b> professor_emmacollins@gmail.com </p>
+              <p><b>PROFESSOR/STUDENT: </b> Professor </p>
+              <p><B>STUDIES: </B>Master's Degree in English Language and Literature from the University of Oxford</p>
+            </p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
